--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
+        "adityadarma/laravel-duitku": "^1.0",
+        "laravel/framework": "^9.0|^10.0|^11.0|^12.0",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.16"
     },
@@ -21,6 +22,15 @@
         "nunomaduro/collision": "^8.6",
         "phpunit/phpunit": "^11.5.3"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "packages/adityadarma/laravel-duitku",
+            "canonical": false
+        }
+    ],
+
+
     "autoload": {
         "psr-4": {
             "App\\": "app/",
