--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "adityadarma/laravel-duitku": "^1.0",
         "laravel/framework": "^9.0|^10.0|^11.0|^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.16"
     },
